--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://cloudstack12.github.io/Bayside-Standing-MRI/">https://cloudstack12.github.io/Bayside-Standing-MRI/</a><br>
+                <a target="_bLank" href="https://outsourcesharks.s3.us-east-005.backblazeb2.com/Bayside-Standing-MRI/index.html">https://outsourcesharks.s3.us-east-005.backblazeb2.com/Bayside-Standing-MRI/index.html</a><br>
+                <a target="_bLank" href="https://cloudstackos.s3.ap-northeast-1.amazonaws.com/Bayside-Standing-MRI/index.html">https://cloudstackos.s3.ap-northeast-1.amazonaws.com/Bayside-Standing-MRI/index.html</a><br>
             </section>
             
         </div>
